added octicons and fixed css on print

--- a/_lessons/math/6/1/6.md
+++ b/_lessons/math/6/1/6.md
@@ -8,8 +8,21 @@ aims:
     Пресмятам лице на триъгълник
   skill:
     Извличам данни от таблица
-  belief:
+  mindset:
     Помагаме си
+  brave:
+    Организират сами ...
+base:
+  look:
+    усмихнати са
+  can:
+    пресмятат
+  experience:
+    - първи опит
+    - втори опит
+  verify:
+    - проверка едно
+    - проверка две
 phases:
 - content:
   - първо действие
