--- a/_lessons/math/6/1/6.md
+++ b/_lessons/math/6/1/6.md
@@ -1,8 +1,13 @@
 ---
+title: План на Урок 8
+index: 8
+from: 12
 date: 10.08.2017
-title: Урок 8
+class: 6
 aims:
-  main:
+  large:
+    Правим голям проект
+  lesson:
     Определяме равновесната точка на триъгълник
   knowledge:
     Пресмятам лице на триъгълник
@@ -10,13 +15,11 @@ aims:
     Извличам данни от таблица
   mindset:
     Помагаме си
-  brave:
+  engagement:
     Организират сами ...
 base:
   look:
     усмихнати са
-  can:
-    пресмятат
   experience:
     - първи опит
     - втори опит
@@ -25,15 +28,29 @@ base:
     - проверка две
 phases:
 - content:
-  - първо действие
-  - второ действие
+  - нанасям на стената резултатите от първото проследяване на напредъка
+  - залепям графика с ролите и напътствията към него на стената
+  - залепям графика с работилниците и напътствията към него на стената
+  - залепям пътя, който сме извървяли до сега в часовете по математика и областите, през които сме преминали
+  - включвам си лаптопа и камерата на последния чин
+  - записвам голямата цел на дъската
+  - записвам урочната цел на дъската
+  - рисувам 12 квадратчета, като запълвам 8 от тях
+  - записвам на дъската твърдението "Разбирам какво правим в часовете по математика и защо", 1 - "не", 10 - "да"
+  - приготвям си магическата пръчка
+  - приготвям комплекта за помощник-учителя - магическа пръчка, ръководство за помощник-учителя и урочен план
 - content:
     prelude:
-      - странични думи
-      - още странични думи
-    engage:
-      - голямата цел
-      - малката цел
+      - Приятно ли си изкарахте почивните дни?
+      - Пред себе си имате квадратно листче. Напишете името си на него. Напишете и число от 1 до 10, което показва до колко сте съгласни с въпроса, изписан на дъската. От изключителна важност е да сте напълно искрени.
+      - раздавам по едно квадратно листче
+      - Сортирам във възходящ ред
+      - Казвал ли съм ви, че съм магьосник?
+      - Ръкомахам с пръчката си
+      - С тази пръчка мога да правя всякакви вълчебства, но най-често използвам три - за щастие, за сприятеляване и за любопитство. Тази седмица реших да зарадвам четирима от вас, като ги посветя във вълшебното изкуство на учителя магьосник. Те ще получат титлата магьосник помощник-учител, както и три много редки магически артефакта. Магическа пръчка, ръководство за помощник-учителя и урочен план. В света съществуват само два урочни плана - един в мен и един в него. Единствено аз и помощник-учителя ще разполагаме с пълното знание за това, което ни очаква в урока за деня. Задачата на помощник-учителя е да следи през цялото време до кой от петте етапа сме стигнали в урока и да отбелязва дали според него сме изпълнили целите за съответния етап. Следващия час, той ще седне до следващия помощник-учител, за да му предаде знанието си.
+      - Обявявам помощник-учителите според листчетата, които са ми дали и ги питам дали биха поели тази роля за съответния ден. Този с най-ниско разбиране е първи.
+      - Ролята помощник-учител е вписана в графика на стената, заедно с много други роли, които всеки от вас може да изпълнява при желание. Нужно е само да запишете името си в съответното квадратче, като може и да сте повече от един. В петък ще имаме награждаване с грамоти за всеки, който е поел роля през тези три седмици. Нека тези, които вече са имали роля през някой ден от предходните 2 седмици, да се запишат в съответното квадратче.
+      - На стената виждате също и график за работилниците, заедно с напътствия към него. Трябва да го попълните до края на деня, защото след часовете ще мина пак от тук и ще планирам петъчния ден по този график.
     refresh:
       - какво е триъгълник?
       - какви видове може да бъде?
@@ -42,15 +59,17 @@ phases:
 - content:
     what: какво правим?
     how: как се държим?
-    time: 5
-    check: true
     action: какво правя аз
   verify: "проверявам някак си"
 
 - content: начало
   verify: "проверявам някак си"
 
-- content: начало
+- content:
+    what: Опитваме се да открием игра, в която се среща ромб
+    how: как се държим?
+    action:
+      - пускам им Shape of my heart (това е жокер)
   verify: "проверявам някак си"
 
 - content: начало
