attempt to fix linking to stylesheet in github pages

--- a/_lessons/math/6/1/6.md
+++ b/_lessons/math/6/1/6.md
@@ -48,7 +48,7 @@ phases:
       - Казвал ли съм ви, че съм магьосник?
       - Ръкомахам с пръчката си
       - С тази пръчка мога да правя всякакви вълчебства, но най-често използвам три - за щастие, за сприятеляване и за любопитство. Тази седмица реших да зарадвам четирима от вас, като ги посветя във вълшебното изкуство на учителя магьосник. Те ще получат титлата магьосник помощник-учител, както и три много редки магически артефакта. Магическа пръчка, ръководство за помощник-учителя и урочен план. В света съществуват само два урочни плана - един в мен и един в него. Единствено аз и помощник-учителя ще разполагаме с пълното знание за това, което ни очаква в урока за деня. Задачата на помощник-учителя е да следи през цялото време до кой от петте етапа сме стигнали в урока и да отбелязва дали според него сме изпълнили целите за съответния етап. Следващия час, той ще седне до следващия помощник-учител, за да му предаде знанието си.
-      - Обявявам помощник-учителите според листчетата, които са ми дали и ги питам дали биха поели тази роля за съответния ден. Този с най-ниско разбиране е първи.
+      - Обявявам помощник-учителите според листчетата, които са ми дали и ги питам дали биха поели тази роля за съответния ден. Предлагам първо на този, с най-ниско число.
       - Ролята помощник-учител е вписана в графика на стената, заедно с много други роли, които всеки от вас може да изпълнява при желание. Нужно е само да запишете името си в съответното квадратче, като може и да сте повече от един. В петък ще имаме награждаване с грамоти за всеки, който е поел роля през тези три седмици. Нека тези, които вече са имали роля през някой ден от предходните 2 седмици, да се запишат в съответното квадратче.
       - На стената виждате също и график за работилниците, заедно с напътствия към него. Трябва да го попълните до края на деня, защото след часовете ще мина пак от тук и ще планирам петъчния ден по този график.
     refresh:
