updated the lesson structure to fil multipla verifications in one step and added new content in lesson 8

--- a/_lessons/math/6/1/8.md
+++ b/_lessons/math/6/1/8.md
@@ -6,55 +6,74 @@ date: 10.08.2017
 class: 6
 aims:
   large:
-    Правим голям проект
+    Всеки славен герой подготвя работилница, в която представя как математиката присъства в неговото любимо занимание и участва в една такава работилница
   lesson:
-    Определяме равновесната точка на триъгълник
+    - Едно от следните по избор
+    - откриватели - открива игра, в която се среща ромб и прави проучване за символиката му там
+    - проучватели - проучва и разсъждава върху произхода на думите четириъгълник, правоъгълник, квадрат, успоредник, ромб
+    - творци - съставя стихотворение, рисунка, кратко представление или песен с успоредници и/или ромбове
   knowledge:
-    Пресмятам лице на триъгълник
+    умее да различава квадрат, правоъгълник, успоредник и ромб от произволен четириъгълник
   skill:
-    Извличам данни от таблица
+    Превежда реална ситуация на математически език и обратно
   mindset:
     Помагаме си
   engagement:
-    Организират сами ...
+    завладява - учителят задава отворени въпроси и окуражава учениците да повдигат допълнителни въпроси
 base:
   look:
-    усмихнати са
+    любопитни са, имат множество въпроси без отговор от часа и искат да прочетат допълнително вкъщи
   experience:
-    - първи опит
-    - втори опит
+    - извеждат особеностите на квадрат, правоъгълник, успоредник, ромб и произволен четириъгълник
+    - откриват и представят произхода на думите за всеки от тях
+    - откриват и представят игра, в която се среща ромб
+    - съставят и представят творческо произведение с четириъгълник
   verify:
-    - проверка едно
-    - проверка две
+    - Всички ли знаят какво е четириъгълник? - нарисуват четириъгълник на листа си и го вдигат високо. Вдигам един ученик да го изкаже с думи. - в началото на часа
+    - Всички ли са направили фигурата на отбора си? - минавам покрай четирите отбора - в края на изследването
+    - всички познават свойствата на различните четириъгълници? - в края на разяснението
+    - всички ли са изпълнили задачата си по условие? - с критериална матрица - в края на разяснението
 phases:
-- content:
-  - нанасям на стената резултатите от първото проследяване на напредъка
-  - залепям графика с ролите и напътствията към него на стената
-  - залепям графика с работилниците и напътствията към него на стената
-  - залепям пътя, който сме извървяли до сега в часовете по математика и областите, през които сме преминали
-  - включвам си лаптопа и камерата на последния чин
-  - записвам голямата цел на дъската
-  - записвам урочната цел на дъската
-  - рисувам 12 квадратчета, като запълвам 8 от тях
-  - записвам на дъската твърдението "Разбирам какво правим в часовете по математика и защо", 1 - "не", 10 - "да"
-  - приготвям си магическата пръчка
-  - приготвям комплекта за помощник-учителя - магическа пръчка, ръководство за помощник-учителя и урочен план
+- previous_day:
+    - подготвям табло за проследяването nа напредъка за А клас
+    - разпечатвам графика с ролите и напътствията към него
+    - разпечатвам графика с работилниците
+    - разпечатвам пътя, който сме извървяли до сега в часовете по математика
+    - разпечатвам ръководството за помощник учителя 4 пъти и критериалната матрица 6 пъти - по 2 за всеки от 3-те класа
+    - нарязвам жълти и зелени листчета
+  in_the_morning:
+    - нанасям на стената резултатите от първото проследяване на напредъка в Б и В клас
+    - залепям графика с ролите и напътствията към него на стената
+    - залепям графика с работилниците на стената и по едно зелено и жълто листче за всеки
+    - залепям пътя, който сме извървяли до сега в часовете по математика и областите, през които сме преминали на стената
+  before_the_lesson:
+    - включвам си лаптопа и камерата на последния чин
+    - записвам голямата цел на дъската
+    - записвам урочната цел на дъската
+    - рисувам 12 квадратчета, като запълвам 8 от тях
+    - приготвям си магическата пръчка
+    - приготвям комплекта за помощник-учителя - магическа пръчка, ръководство за помощник-учителя и урочен план с критериална матрица
+    - избирам си помощник-учител и му го давам
+    - раздавам по един бял лист за всеки ученик
 - content:
     prelude:
       - Приятно ли си изкарахте почивните дни?
-      - Пред себе си имате квадратно листче. Напишете името си на него. Напишете и число от 1 до 10, което показва до колко сте съгласни с въпроса, изписан на дъската. От изключителна важност е да сте напълно искрени.
-      - раздавам по едно квадратно листче
-      - Сортирам във възходящ ред
       - Казвал ли съм ви, че съм магьосник?
       - Ръкомахам с пръчката си
-      - С тази пръчка мога да правя всякакви вълчебства, но най-често използвам три - за щастие, за сприятеляване и за любопитство. Тази седмица реших да зарадвам четирима от вас, като ги посветя във вълшебното изкуство на учителя магьосник. Те ще получат титлата магьосник помощник-учител, както и три много редки магически артефакта. Магическа пръчка, ръководство за помощник-учителя и урочен план. В света съществуват само два урочни плана - един в мен и един в него. Единствено аз и помощник-учителя ще разполагаме с пълното знание за това, което ни очаква в урока за деня. Задачата на помощник-учителя е да следи през цялото време до кой от петте етапа сме стигнали в урока и да отбелязва дали според него сме изпълнили целите за съответния етап. Следващия час, той ще седне до следващия помощник-учител, за да му предаде знанието си.
-      - Обявявам помощник-учителите според листчетата, които са ми дали и ги питам дали биха поели тази роля за съответния ден. Предлагам първо на този, с най-ниско число.
+      - С тази пръчка мога да правя всякакви вълчебства, но най-често използвам три - за щастие, за сприятеляване и за любопитство. Тази седмица реших да зарадвам четирима от вас, като ги посветя във вълшебното изкуство на учителя магьосник. Те ще получат титлата магьосник помощник-учител, както и три много редки магически артефакта. Магическа пръчка, ръководство за помощник-учителя и урочен план. В света съществуват само два урочни плана - един в мен и един в него. Единствено аз и помощник-учителя ще разполагаме с пълното знание за това, което ни очаква в урока за деня и заедно ще проверяваме дали сме постигнали целите за урока. Днес предложих тази възможност на .............. Само той знае защо съм избрал именно него и утре ще трябва по същия признак, двамата с него заедно да изберем следващия магьосник помощник-учител. Ще седне до него и ще му предаде това апокрифно знание на толтеките. Знаете ли какво е апокрифен? А знаете ли кои са толтеките? Проучете тези две думи и можете да ги обсъдите с г-жа Иванка Иванова, която преподава български език на 6а клас. Тя искрено се радва на подобни разговори.
+      - Записвам на дъската - апокривен, толтеки, Иванка Иванова - БЕЛ - 6а клас
       - Ролята помощник-учител е вписана в графика на стената, заедно с много други роли, които всеки от вас може да изпълнява при желание. Нужно е само да запишете името си в съответното квадратче, като може и да сте повече от един. В петък ще имаме награждаване с грамоти за всеки, който е поел роля през тези три седмици. Нека тези, които вече са имали роля през някой ден от предходните 2 седмици, да се запишат в съответното квадратче.
-      - На стената виждате също и график за работилниците, заедно с напътствия към него. Трябва да го попълните до края на деня, защото след часовете ще мина пак от тук и ще планирам петъчния ден по този график.
+      - На стената виждате също и график за работилниците, заедно с напътствия към него. Трябва да го попълните до края на деня, защото след часовете ще мина пак от тук и ще планирам големия петъчен ден на работилниците по този график.
     refresh:
-      - какво е триъгълник?
-      - какви видове може да бъде?
-  verify: прверявам някак си
+      - пред себе си имате бял лист. Нарисувайте на него един четириъгълник и го вдигнете високо, така че да мога да го видя ясно
+      - задавам въпрос към един ученик - "Изкажи с думи. Как разбираш понятието четириъгълник?"
+    aim:
+      Знае произхода на думите квадрат, правоъгълник, успоредник и ромб; може да назове игра, в която се среща една от тези фигури и състави творба с тях
+
+  verify:
+    - всички знаят как изглежда един четириъгълник
+    - първият ученик, когото вдигна, го изразява с думи - "Геометрична фигура с 4 ъгъла"
+    - ако той все още не го е научил, тогава друг, който го знае, се съгласява да седнат заедно и да му го обясни
 
 - content:
     what: какво правим?
