--- a/_lessons/math/6/1/8.md
+++ b/_lessons/math/6/1/8.md
@@ -40,12 +40,16 @@ phases:
     - разпечатвам графика с работилниците
     - разпечатвам пътя, който сме извървяли до сега в часовете по математика
     - разпечатвам ръководството за помощник учителя 4 пъти и критериалната матрица 6 пъти - по 2 за всеки от 3-те класа
-    - нарязвам жълти и зелени листчета
+    - купувам малки зелени и жълти листчета или си нарязвам
+    - копирам задачи за кутиите - в 3 екземпляра
+    - подготвям си последователност от песни - shape of my heart и джаз
   in_the_morning:
     - нанасям на стената резултатите от първото проследяване на напредъка в Б и В клас
     - залепям графика с ролите и напътствията към него на стената
     - залепям графика с работилниците на стената и по едно зелено и жълто листче за всеки
     - залепям пътя, който сме извървяли до сега в часовете по математика и областите, през които сме преминали на стената
+    - подготвям си 3 х 3 свитъка
+    - питам Божидар как мога да разбера кого мога да снимам и кого не
   before_the_lesson:
     - включвам си лаптопа и камерата на последния чин
     - записвам голямата цел на дъската
@@ -55,6 +59,9 @@ phases:
     - приготвям комплекта за помощник-учителя - магическа пръчка, ръководство за помощник-учителя и урочен план с критериална матрица
     - избирам си помощник-учител и му го давам
     - раздавам по един бял лист за всеки ученик
+    - поставям табелки на чиновете - успоредник, правоъгълник, квадрат, ромб
+    - поставям си другия лаптоп отпред на бюрото, обърнат към тях и приготвям хронометър
+    - подготвям си 3 свитъка за задълбочаването
 - content:
     prelude:
       - Приятно ли си изкарахте почивните дни?
@@ -65,32 +72,75 @@ phases:
       - Ролята помощник-учител е вписана в графика на стената, заедно с много други роли, които всеки от вас може да изпълнява при желание. Нужно е само да запишете името си в съответното квадратче, като може и да сте повече от един. В петък ще имаме награждаване с грамоти за всеки, който е поел роля през тези три седмици. Нека тези, които вече са имали роля през някой ден от предходните 2 седмици, да се запишат в съответното квадратче.
       - На стената виждате също и график за работилниците, заедно с напътствия към него. Трябва да го попълните до края на деня, защото след часовете ще мина пак от тук и ще планирам големия петъчен ден на работилниците по този график.
     refresh:
-      - пред себе си имате бял лист. Нарисувайте на него един четириъгълник и го вдигнете високо, така че да мога да го видя ясно
+      - пред себе си имате бял лист. На него нашишете името си.
+      - След това нарисувайте един четириъгълник и вдигнете листа високо, така че да мога да го видя ясно
       - задавам въпрос към един ученик - "Изкажи с думи. Как разбираш понятието четириъгълник?"
     aim:
       Знае произхода на думите квадрат, правоъгълник, успоредник и ромб; може да назове игра, в която се среща една от тези фигури и състави творба с тях
-
+  time: 10
   verify:
     - всички знаят как изглежда един четириъгълник
     - първият ученик, когото вдигна, го изразява с думи - "Геометрична фигура с 4 ъгъла"
     - ако той все още не го е научил, тогава друг, който го знае, се съгласява да седнат заедно и да му го обясни
-
 - content:
-    what: какво правим?
-    how: как се държим?
-    action: какво правя аз
-  verify: "проверявам някак си"
-
-- content: начало
-  verify: "проверявам някак си"
-
-- content:
-    what: Опитваме се да открием игра, в която се среща ромб
-    how: как се държим?
+    what:
+      - Пребройте се квадрат, правоъгълник, успоредник, ромб ... квадрат, ....
+      - Сядат си по масите
+      - Вече проверих, че знаете какво е четириъгълник. За тази задача ще разполагате с четириъгълник, изграден от моливи и ластици.
+      - Показвам го
+      - От него, трябва да образувате фигурата, на която е кръстен отборът ви. В следващия етап на урока всеки отбор ще представи фигурата си и ще изведе характеристиките ѝ
+    how:
+      - Можете да размествате и придвиждате моливите както пожелаете. Можете да обсъждате вътре в отбора си и можете да минавате през другите отбори, за да видите какво правят те.
+      - Ако станете готови по-бързо, вземете задача от кутията със задачи
     action:
-      - пускам им Shape of my heart (това е жокер)
-  verify: "проверявам някак си"
-
-- content: начало
-  verify: "проверявам някак си"
+      - раздавам им четириъгълниците от моливи и ластици
+      - пускам часовника
+  time: 6
+  verify:
+    - всички са направили четириъгълника с името на отбора си
+    - някои са направили четириъгълник, който надгражда техния (например имат да направят успоредник, а са направили ромб, правоъгълник или квадрат) и могат да се обосноват - Това наистина ли е фигурата, на която е кръстен отборът ви? Какви са характеристиките на вашата фигура? Тази притежава ли ги? А притежава ли и допълнителни?
+- content:
+  - всеки отбор представя четириъгълника си и извежда основните му характеристики
+  - докато го представят, аз рисувам дърво на четириъгълниците и техните характеристики
+  - всеки четириъгълник - има 4 ъгъла
+  - успоредник - 2 х 2 равни страни
+  - правоъгълник - 2 х 2 равни страни и прав ъгъл
+  - квадрат - 4 равни страни и прав ъгъл
+  - ромб - 4 равни страни
+  verify:
+  - рисувам на дъската един успоредник. "Ще преброя до 3 и всички в един глас трябва да кажете каква е"
+  - вдигам един ученик, който е замълчал или сбъркал и той го повтаря. Обосновава се защо е успоредник
+  - вдигам втори - А дали е и четириъгълник?
+  - вдигам трети - А дали е ромб? Защо мислиш така? Останалите покажете с палци дали сте съгласни.
+- content:
+    what:
+    - Разделяте се на три отбора - откриватели (лупа), проучватели (книга), творци (четка)
+    - Рисувам трите роли и символа на всяка от тях на дъската
+    - Намерете листа, ня който нарисувахте правоъгълника в началото на часа
+    - Нарисувайте или напишете на него тази от трите дейности, която искате да извършвате
+    - Изчаквам 15 секунди и през това време рисувам 3-те табелки
+    - Поставям табелките на три маси
+    - Отидете при новия си отбор
+    - Давам кратки напътствия за всеки от отборите, след което ще разпиша по-подробни на дъската.
+    - откриватели - откриват игра, в която се среща ромб и правят проучване за символиката му там
+    - проучватели - проучват и разсъждават върху произхода на думите четириъгълник, правоъгълник, квадрат, успоредник, ромб
+    - творци - съставят стихотворение, рисунка, кратко представление или песен с успоредници и/или ромбове
+    how:
+    - Ще ви раздам свитъци. Можете да рисувате върху тях. След като изтече времето, ще имаме по две минути за всеки от трите отбора да представи труда си.
+    action:
+    - раздавам трите свитъка
+    - пускам часовника
+    - пускам Shape of my heart (това е жокер) и джаз
+  verify:
+    - попълвам си трите критериални матрици - по една за всеки отбор
+- content:
+  - на собствения си лист напишете една област от живота ни, в която открихте математиката
+  - изчаквам 1 минута
+  - помнете, че трябва да попълните графика за работилниците до края на деня
+  - проверка на разбирането
+  - оставете листа си на чина пред мен
+  - Благодаря ви за чудесния час. ...... Поздравявам за нещо от часа
+  - До утре
+  verify:
+  - Какво трябва да направите до края на деня?
 ---
