--- a/_lessons/math/6/1/8.md
+++ b/_lessons/math/6/1/8.md
@@ -2,31 +2,27 @@
 title: План на Урок 8
 index: 8
 from: 12
-date: 10.08.2017
+date: 9.08.2017
 class: 6
 aims:
   large:
     Всеки славен герой подготвя работилница, в която представя как математиката присъства в неговото любимо занимание и участва в една такава работилница
   lesson:
-    - Едно от следните по избор
-    - откриватели - открива игра, в която се среща ромб и прави проучване за символиката му там
-    - проучватели - проучва и разсъждава върху произхода на думите четириъгълник, правоъгълник, квадрат, успоредник, ромб
-    - творци - съставя стихотворение, рисунка, кратко представление или песен с успоредници и/или ромбове
+    съставя и представя творческо произведение с четириъгълник
   knowledge:
     умее да различава квадрат, правоъгълник, успоредник и ромб от произволен четириъгълник
   skill:
-    Превежда реална ситуация на математически език и обратно
+    Открива математиката в света около нас
   mindset:
-    Помагаме си
+    трябва да се изслушваме, защото мнението на всеки един от нас е ценно
   engagement:
     завладява - учителят задава отворени въпроси и окуражава учениците да повдигат допълнителни въпроси
 base:
   look:
-    любопитни са, имат множество въпроси без отговор от часа и искат да прочетат допълнително вкъщи
+    вълнуват се от представянето на идеята си и са уверени, че могат се справят с тази задача и следващия път
   experience:
+    - припомнят си какво е четириъгълник, а тези, които не са знаели, го научават
     - извеждат особеностите на квадрат, правоъгълник, успоредник, ромб и произволен четириъгълник
-    - откриват и представят произхода на думите за всеки от тях
-    - откриват и представят игра, в която се среща ромб
     - съставят и представят творческо произведение с четириъгълник
   verify:
     - Всички ли знаят какво е четириъгълник? - нарисуват четириъгълник на листа си и го вдигат високо. Вдигам един ученик да го изкаже с думи. - в началото на часа
@@ -39,13 +35,13 @@ phases:
     - разпечатвам графика с ролите и напътствията към него
     - разпечатвам графика с работилниците
     - разпечатвам пътя, който сме извървяли до сега в часовете по математика
-    - разпечатвам ръководството за помощник учителя 4 пъти и критериалната матрица 6 пъти - по 2 за всеки от 3-те класа
+    - разпечатвам урочния план 7 пъти, ръководството за помощник учителя 6 пъти и критериалната матрица 8 пъти - по 2 за всеки от 3-те класа + 2 за посетители
     - купувам малки зелени и жълти листчета или си нарязвам
     - копирам задачи за кутиите - в 3 екземпляра
-    - подготвям си последователност от песни - shape of my heart и джаз
+    - подготвям си 40 листчета в 4 групи - квадрат, правоъгълник, успоредник и ромб
   in_the_morning:
-    - нанасям на стената резултатите от първото проследяване на напредъка в Б и В клас
-    - залепям графика с ролите и напътствията към него на стената
+    - нанасям на стената резултатите от първото проследяване на напредъка в Б и В клас и залепям това за А клас
+    - допълвам ролите на стената в А клас
     - залепям графика с работилниците на стената и по едно зелено и жълто листче за всеки
     - залепям пътя, който сме извървяли до сега в часовете по математика и областите, през които сме преминали на стената
     - подготвям си 3 х 3 свитъка
@@ -56,36 +52,39 @@ phases:
     - записвам урочната цел на дъската
     - рисувам 12 квадратчета, като запълвам 8 от тях
     - приготвям си магическата пръчка
-    - приготвям комплекта за помощник-учителя - магическа пръчка, ръководство за помощник-учителя и урочен план с критериална матрица
+    - приготвям комплекта за помощник-учителя - ръководство за помощник-учителя и урочен план с критериална матрица
     - избирам си помощник-учител и му го давам
     - раздавам по един бял лист за всеки ученик
     - поставям табелки на чиновете - успоредник, правоъгълник, квадрат, ромб
     - поставям си другия лаптоп отпред на бюрото, обърнат към тях и приготвям хронометър
     - подготвям си 3 свитъка за задълбочаването
+    - подготвям си листчетата с геометричните фигури
 - content:
     prelude:
       - Приятно ли си изкарахте почивните дни?
       - Казвал ли съм ви, че съм магьосник?
       - Ръкомахам с пръчката си
-      - С тази пръчка мога да правя всякакви вълчебства, но най-често използвам три - за щастие, за сприятеляване и за любопитство. Тази седмица реших да зарадвам четирима от вас, като ги посветя във вълшебното изкуство на учителя магьосник. Те ще получат титлата магьосник помощник-учител, както и три много редки магически артефакта. Магическа пръчка, ръководство за помощник-учителя и урочен план. В света съществуват само два урочни плана - един в мен и един в него. Единствено аз и помощник-учителя ще разполагаме с пълното знание за това, което ни очаква в урока за деня и заедно ще проверяваме дали сме постигнали целите за урока. Днес предложих тази възможност на .............. Само той знае защо съм избрал именно него и утре ще трябва по същия признак, двамата с него заедно да изберем следващия магьосник помощник-учител. Ще седне до него и ще му предаде това апокрифно знание на толтеките. Знаете ли какво е апокрифен? А знаете ли кои са толтеките? Проучете тези две думи и можете да ги обсъдите с г-жа Иванка Иванова, която преподава български език на 6а клас. Тя искрено се радва на подобни разговори.
-      - Записвам на дъската - апокривен, толтеки, Иванка Иванова - БЕЛ - 6а клас
-      - Ролята помощник-учител е вписана в графика на стената, заедно с много други роли, които всеки от вас може да изпълнява при желание. Нужно е само да запишете името си в съответното квадратче, като може и да сте повече от един. В петък ще имаме награждаване с грамоти за всеки, който е поел роля през тези три седмици. Нека тези, които вече са имали роля през някой ден от предходните 2 седмици, да се запишат в съответното квадратче.
-      - На стената виждате също и график за работилниците, заедно с напътствия към него. Трябва да го попълните до края на деня, защото след часовете ще мина пак от тук и ще планирам големия петъчен ден на работилниците по този график.
+      - С тази пръчка мога да правя всякакви вълчебства, но най-често използвам три - за щастие, за сприятеляване и за любопитство. Тази седмица реших да зарадвам четирима от вас, като ги посветя във вълшебното изкуство на учителя магьосник. Те ще получат титлата магьосник помощник-учител, както и много рядък магически артефакт наречен урочен план. В света съществуват само два такива урочни плана - един в мен и един в него. Единствено аз и помощник-учителя ще разполагаме с пълното знание за това, което ни очаква в урока за деня и заедно ще проверяваме дали сме постигнали целите за урока. Днес предложих тази възможност на .............. Само той знае защо съм избрал именно него и утре ще трябва по същия признак, двамата с него заедно да изберем следващия магьосник помощник-учител. Ще седне до него и ще му предаде това апокрифно знание на толтеките. Знаете ли какво е апокрифен? А знаете ли кои са толтеките? Проучете тези две думи, защото в тях се крие много магия. Можете да ги обсъдите и с учител по български език или история, както и с ваш познат.
+      - Записвам на дъската - апокривен, толтеки
+      - На стената виждате график за работилниците, заедно с напътствия към него. Трябва да го попълните до края на деня, защото след часовете ще мина пак от тук и ще планирам големия петъчен ден на работилниците по този график.
     refresh:
-      - пред себе си имате бял лист. На него нашишете името си.
+      - пред себе си имате бял лист. На него напишете името си.
       - След това нарисувайте един четириъгълник и вдигнете листа високо, така че да мога да го видя ясно
       - задавам въпрос към един ученик - "Изкажи с думи. Как разбираш понятието четириъгълник?"
+      - очакван отговор - "Геометрична фигура с 4 ъгъла"
+      - ако не отговори, питам друг и ако той отговори, ги поставям да седнат един до друг, за да си помагат
     aim:
-      Знае произхода на думите квадрат, правоъгълник, успоредник и ромб; може да назове игра, в която се среща една от тези фигури и състави творба с тях
-  time: 10
+      състави творческо произведение с четириъгълник и да го представи пред публика
+  time: 7
   verify:
     - всички знаят как изглежда един четириъгълник
     - първият ученик, когото вдигна, го изразява с думи - "Геометрична фигура с 4 ъгъла"
     - ако той все още не го е научил, тогава друг, който го знае, се съгласява да седнат заедно и да му го обясни
 - content:
     what:
-      - Пребройте се квадрат, правоъгълник, успоредник, ромб ... квадрат, ....
-      - Сядат си по масите
+      - Изтеглят си листче - квадрат, правоъгълник, успоредник или ромб
+      - Ако в предния етап съм събрал двама човека, които да си помагат, не ги разделям
+      - Вземете листа с името си и седнете на масата с геометричната си фигура
       - Вече проверих, че знаете какво е четириъгълник. За тази задача ще разполагате с четириъгълник, изграден от моливи и ластици.
       - Показвам го
       - От него, трябва да образувате фигурата, на която е кръстен отборът ви. В следващия етап на урока всеки отбор ще представи фигурата си и ще изведе характеристиките ѝ
@@ -102,7 +101,7 @@ phases:
 - content:
   - всеки отбор представя четириъгълника си и извежда основните му характеристики
   - докато го представят, аз рисувам дърво на четириъгълниците и техните характеристики
-  - всеки четириъгълник - има 4 ъгъла
+  - произволен четириъгълник - има 4 ъгъла
   - успоредник - 2 х 2 равни страни
   - правоъгълник - 2 х 2 равни страни и прав ъгъл
   - квадрат - 4 равни страни и прав ъгъл
@@ -114,33 +113,30 @@ phases:
   - вдигам трети - А дали е ромб? Защо мислиш така? Останалите покажете с палци дали сте съгласни.
 - content:
     what:
-    - Разделяте се на три отбора - откриватели (лупа), проучватели (книга), творци (четка)
-    - Рисувам трите роли и символа на всяка от тях на дъската
-    - Намерете листа, ня който нарисувахте правоъгълника в началото на часа
-    - Нарисувайте или напишете на него тази от трите дейности, която искате да извършвате
-    - Изчаквам 15 секунди и през това време рисувам 3-те табелки
-    - Поставям табелките на три маси
-    - Отидете при новия си отбор
-    - Давам кратки напътствия за всеки от отборите, след което ще разпиша по-подробни на дъската.
-    - откриватели - откриват игра, в която се среща ромб и правят проучване за символиката му там
-    - проучватели - проучват и разсъждават върху произхода на думите четириъгълник, правоъгълник, квадрат, успоредник, ромб
-    - творци - съставят стихотворение, рисунка, кратко представление или песен с успоредници и/или ромбове
+    - всеки отбор трябва да помисли къде в света около нас се среща фигурата му и да състави стихотворение, рисунка, кратко представление или песен с нея
+    - записвам и рисувам на дъската - стихотворение, рисунка, кратко представление или песен
+    - след това всеки отбор ще представи творбата си
     how:
-    - Ще ви раздам свитъци. Можете да рисувате върху тях. След като изтече времето, ще имаме по две минути за всеки от трите отбора да представи труда си.
+    - Ще ви раздам по един свитък на отбор, който можете да използвате по какъвто начин вие прецените
+    - Очаквам от вас да работите заедно, да си помагате и да се изслушвате, защото мнението на всеки в отбора ви е ценно и може да се превърне в ядрото на вашата обща творба
+    - Имате 8 минути за творчесто и по една минута за всеки от трите отбора да представяне.
     action:
     - раздавам трите свитъка
     - пускам часовника
-    - пускам Shape of my heart (това е жокер) и джаз
+    - пускам Shape of my heart (това е жокер за отбора с ромбовете)
+  time: 14
   verify:
-    - попълвам си трите критериални матрици - по една за всеки отбор
+    - попълвам си четирите критериални матрици на следващата страница - по една за всеки отбор
 - content:
   - на собствения си лист напишете една област от живота ни, в която открихте математиката
   - изчаквам 1 минута
   - помнете, че трябва да попълните графика за работилниците до края на деня
-  - проверка на разбирането
+  - проверка на разбирането - "Какво трябва да направите до края на деня?"
   - оставете листа си на чина пред мен
-  - Благодаря ви за чудесния час. ...... Поздравявам за нещо от часа
+  - Благодаря ви за чудесния час. ...... Поздравявам за нещо положително, което са направили през часа.
   - До утре
+  time: 3
   verify:
-  - Какво трябва да направите до края на деня?
+  - повтарят какво трябва да направят до края на деня?
+  - на листа са записали - "в игрите", "в изобразителното изкуство"
 ---
