--- a/_lessons/math/6/1/10.md
+++ b/_lessons/math/6/1/10.md
@@ -57,7 +57,7 @@ engage:
   verify:
     - всички са нарисували един паралелепипед
     - ако не всички са успели, след като ги насърча, питат друг изследовател за помощ и се справят със задачата
-    - който не се е справил и не помага на свой съотборник, си взема задача от купчинката със задачи, и си я решава на листа, докато неуспелите първия път чертаят своя паралелепипед
+    - който не се е справил и не помага на свой съотборник, си взема задача от купчинката със задачи, и си я решава на листа
 explore:
   content:
     what:
@@ -92,11 +92,13 @@ elaborate:
     - Проверяваме разгъвката. Трябва да я сгънете и ако сте я направили вярно, ще се сдобиете с копие на кутията, от която тръгнахте.
     how:
     - Ако не сте успели да завършите разгъвката си, сега е момента
-    - всичко друго е като при предната задача
+    - всички напътствия за начината на протичане на работа от предишната задача се отнасят и за тази. Можете да си ги припомните от таблото
     - при възникнали въпроси - таблото > помощник-учителя > учителя
     action:
     - пускам часовника
     - пускам джаз
+  matrix:
+    - da
 evaluate:
   content:
     - изходен билет - напишете върху листа си
